--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "deepmerge": "~1.3.2",
     "node-cache": "~4.1.1",
     "request": "~2.81.0",
-    "request-promise": "~4.2.1"
+    "request-promise": "~4.2.1",
+    "riot-ratelimiter": "~0.0.6"
   },
   "devDependencies": {
     "chai": "^3.5.0",
