--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leaguejs",
-  "version": "1.4.1",
+  "version": "1.5.0-beta.1",
   "description": "Wrapper for the League of Legends API",
   "keywords": [
     "leagueoflegends",
