--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "url": "https://github.com/Colorfulstan/LeagueJS"
   },
   "dependencies": {
-    "bluebird": "~3.5.0",
+    "bluebird": "~3.5.1",
     "deepmerge": "~1.3.2",
     "node-cache": "~4.1.1",
     "request": "~2.81.0",
-    "request-promise": "~4.2.1",
-    "riot-ratelimiter": "~0.0.8"
+    "request-promise": "~4.2.2",
+    "riot-ratelimiter": "~0.0.9"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -36,13 +36,13 @@
     "gulp": "~3.9.1",
     "gulp-clean": "~0.3.2",
     "gulp-exec": "~2.1.3",
-    "gulp-istanbul": "~1.1.1",
+    "gulp-istanbul": "~1.1.2",
     "gulp-jshint": "~2.0.4",
     "gulp-mocha": "~4.3.1",
     "isparta": "~4.0.0",
-    "mocha": "latest",
+    "mocha": "~4.0.1",
     "plato": "~1.7.0",
-    "sinon": "latest"
+    "sinon": "~4.0.1"
   },
   "maintainers": [],
   "readmeFilename": "README.md",
