--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "bluebird": "~3.5.1",
     "deepmerge": "~1.3.2",
     "node-cache": "~4.1.1",
-    "request": "~2.81.0",
+    "request": "~2.83.0",
     "request-promise": "~4.2.2",
     "riot-ratelimiter": "~0.0.9"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "~6.0.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "gulp": "~3.9.1",
     "gulp-clean": "~0.3.2",
     "gulp-exec": "~2.1.3",
@@ -42,7 +42,7 @@
     "isparta": "~4.0.0",
     "mocha": "~4.0.1",
     "plato": "~1.7.0",
-    "sinon": "~4.0.1"
+    "sinon": "~4.0.2"
   },
   "maintainers": [],
   "readmeFilename": "README.md",
