--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "~3.5.1",
     "deepmerge": "~1.3.2",
     "node-cache": "~4.1.1",
+    "node-mkdirs": "0.0.1",
     "request": "~2.83.0",
     "request-promise": "~4.2.2",
     "riot-ratelimiter": "~0.1.3"
