--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "gulp-jshint": "~2.0.4",
     "gulp-mocha": "~4.3.1",
     "isparta": "~4.0.0",
-    "mocha": "~4.0.1",
+    "mocha": "~5.2.0",
     "plato": "~1.7.0",
-    "sinon": "~4.0.2"
+    "sinon": "~6.1.4",
+    "sinon-chai": "~3.2.0"
   },
   "maintainers": [],
   "readmeFilename": "README.md",
