--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leaguejs",
-  "version": "1.10.0-beta.8",
+  "version": "1.10.0",
   "description": "Wrapper for the League of Legends API",
   "keywords": [
     "leagueoflegends",
