--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "node-mkdirs": "0.0.1",
     "request": "~2.88.0",
     "request-promise": "~4.2.2",
-    "riot-ratelimiter": "~0.1.5"
+    "riot-ratelimiter": "~0.1.5",
+    "xregexp": "~4.2.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
